Fix z-index problem for showing values of dropdowns inside tables

--- a/ember-caluma-portal/app/styles/app.scss
+++ b/ember-caluma-portal/app/styles/app.scss
@@ -1,3 +1,4 @@
+$modal-z-index: 1;
 @import "ember-power-select";
 @import "ember-uikit";
 @import "ember-caluma";
